# r3l-monorepo

./: .dockerignore  .gitignore  ARCHITECTURE.md  FILES.md  PLAN.md  PROVE_POLLING_PLAN.md  README.md  RUNNING.md  TESTING.md  dev.sh  docker-compose.yml  package-lock.json
.claude/: settings.json  settings.local.json
aws-infra/r3l-app/: README.md  deploy.sh  main.tf  terraform.tfvars.example
aws-infra/r3l-app-gpu/: .gitignore  README.md  main.tf
data/test_files/: lcd_x_hcpc_code.csv  state_x_region.csv
data/trust/: trust-list.pem
data/trust/curated/: adobe-firefly.pem  c2pa-test.pem  openai-truepic.pem
data/trust/official/: adobe-production.pem  adobe.pem  digicert.pem  google.pem  irdeto.pem  ssl-com.pem  tauth.pem  trufo.pem  vivo.pem  xiaomi.pem
docker/: api-py.Dockerfile  api.Dockerfile  dev.Dockerfile  validator-entrypoint.sh  validator.Dockerfile  verifier.Dockerfile
docs/: DEPLOY.md  LOCAL_TESTING.md  RUN_EDGE_NODE.md  architecture.md
infra/gpu-prover/: README.md  main.tf
scripts/: add-trust.sh  r3l-edge  sign-message.py
scripts/curl_tests/local/: 1_register.sh  2_verify_identity.sh  2_verify_identity_confirm.sh  3_attest-test-files.sh  4_attest-batch.sh
scripts/curl_tests/server/: 1_register.sh  2_verify_identity1.sh  2_verify_identity2.sh  3_attest-test-files.sh  4_attest-batch.sh
services/api/: Cargo.toml
services/api-py/: auth.py  config.py  db.py  did.py  main.py  models.py  requirements.txt  similarity.py  solana_read.py  solana_tx.py  storage.py  versioning.py
services/api-py/routes/: attest.py  attestation.py  auth_routes.py  content.py  developer.py  did_route.py  edge.py  org.py  prove.py  query.py  similar.py  submit.py  verify.py  wallet.py
services/api-rust/: Cargo.toml
services/api-rust/src/: main.rs
services/api-rust/src/routes/: attest.rs  attestation.rs  identity.rs  mod.rs  prove.rs  verify.rs
services/api/src/: main.rs
services/api/src/routes/: attestation.rs  mod.rs  prove.rs  submit.rs  verify.rs
services/edge-nodes/c/: Makefile  main.c  r3l_edge.c  r3l_edge.h
services/edge-nodes/python/: pyproject.toml
services/edge-nodes/python/src/r3l_edge/: __init__.py  cli.py  client.py
services/edge-nodes/rust/: Cargo.toml
services/edge-nodes/rust/src/: main.rs
services/provenance_attestation/: Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.json
services/provenance_attestation/.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  test-ledger-log.txt  validator-keypair.json  vote-account-keypair.json
services/provenance_attestation/.anchor/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1770920668260966  MANIFEST-000021
services/provenance_attestation/programs/provenance_attestation/: Cargo.toml
services/provenance_attestation/programs/provenance_attestation/src/: constants.rs  errors.rs  lib.rs  state.rs
services/provenance_attestation/scripts/: submit.ts
services/provenance_attestation/tests/: provenance_attestation.ts
services/prover/: Cargo.toml
services/prover/program/: Cargo.toml
services/prover/program/src/: main.rs
services/prover/script/: Cargo.toml
services/prover/script/src/: jumbf_extract.rs  lib.rs
services/prover/shared/: Cargo.toml
services/prover/shared/src/: lib.rs
services/verifier/: Cargo.toml
services/verifier/src/: lib.rs  main.rs
services/web/: package-lock.json  package.json
services/web/src/: App.vue  api.ts  router.ts  types.ts
services/web/src/components/: FileCapture.vue  FileUpload.vue  LookupForm.vue  ProofStatus.vue  Results.vue  SubmitPanel.vue
services/web/src/pages/: Account.vue  ApiReference.vue  Docs.vue  Home.vue  Identity.vue  Prove.vue  Search.vue  Verify.vue
