[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tempfile = "3"
anyhow = "1"
hex = "0.4"
borsh = "0.10"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
solana-sdk = "2"
solana-rpc-client = "2"
solana-rpc-client-api = "2"

uuid = { version = "1", features = ["v4"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
dotenvy = "0.15"

# Import verifier as a path dependency
verifier = { path = "../verifier" }
