[workspace]
members = ["programs/provenance_attestation"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Pin blake3 to avoid edition2024 requirement (platform-tools uses Rust 1.84)
[workspace.dependencies]
blake3 = ">=1.3.1, <1.8"
