[package]
name = "prover-script"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[[bin]]
name = "debug_jumbf"
path = "src/bin/debug_jumbf.rs"

[dependencies]
sp1-sdk = "5.0.0"
sp1-prover = "5.0.0"
prover-shared = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
coset = "0.3"
ciborium = "0.2"
pem = "3"

[build-dependencies]
sp1-build = "5.0.0"
